# Interactive-Socket

./: .gitignore  Interactive Socket.py  LICENSE  README.md  TCPSession.py  app.py  pyproject.toml
src/: __init__.py  tcp.py  udp.py
